Adds DevContainer config, README
Implements rest api prototype for capabilities
