# src/service/api/index.ts
@@ -1,25 +1,39 @@
 import { EHttpResponseCodes } from "../../constants"
+import { Inject } from "typescript-ioc"
+import { Logger } from "../logger"
 import { RegisterRoutes } from "../../routes/routes"
+import { createDirectoryIfNotPresent } from "../file-io"
+import Ffmpeg from "fluent-ffmpeg"
 import bodyParser from "body-parser"
 import cors from "cors"
 import express, {
 	Application, Express, NextFunction, Request, Response
 } from "express"
+import path from "path"
 import swaggerDocument from "../../../swagger.json"
 import swaggerUi from "swagger-ui-express"
-export class Server {
+export class Api {
+	@Inject
+	private readonly logger!: Logger
 	private readonly _port: number
 	private readonly app: Application
 	private readonly defaultPort: number = 3000
+	private readonly startUpDelay: number = 1500
 	constructor(port?: number) {
 		this.app = express()
 		this._port = port ?? this.defaultPort
 		this.configureServer()
 		this.addApi()
+		Ffmpeg().setFfmpegPath("/opt/ffmpeg/bin/ffmpeg")
+		this.createApplicationDirectiories(["input", "output"])
+		setTimeout(
+			() => this.listen(),
+			this.startUpDelay
+		)
 	}
 	listen = (): void => {
 		this.app.listen(this.port, () => {
-			console.log(`Listening on port ${this.port}`)
+			this.logger.log(`Listening on port ${this.port}`)
 		})
 	}
 	private readonly addApi = (): void => {
@@ -36,7 +50,7 @@ export class Server {
 			next: NextFunction
 		) => {
 			const status = err.status || EHttpResponseCodes.internalServerError
-			console.error(err)
+			this.logger.error(err)
 			const body: any = {
 				fields: err.fields || undefined,
 				message: err.message || "An error occurred during the request.",
@@ -65,6 +79,16 @@ export class Server {
 			console.log(`Request received: ${req.method} ${req.url}`)
 			next()
 		})
+	}
+	private createApplicationDirectiories(directories: string[]): void {
+		const basePath = path.join(__dirname, "../../..")
+		const promises = []
+		for (const directory of directories) {
+			promises.push(createDirectoryIfNotPresent(path.join(basePath, directory)))
+		}
+		Promise.all(promises)
+			.then(res => console.log(res))
+			.catch(console.error)
 	}
 	get port(): number {
 		return this._port
