# swagger.json
@@ -6,85 +6,19 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"IConversionRequestBody": {
+			"IConversionProcessingResponse": {
 				"properties": {
-					"file": {
-						"type": "string",
-						"format": "byte"
-					},
-					"filename": {
-						"type": "string"
-					},
-					"originalFormat": {
-						"type": "string"
-					},
-					"targetFormat": {
+					"conversionId": {
 						"type": "string"
 					}
 				},
 				"required": [
-					"file",
-					"filename",
-					"originalFormat",
-					"targetFormat"
+					"conversionId"
 				],
 				"type": "object",
 				"additionalProperties": false,
 				"example": {
-					"file": {
-						"type": "Buffer",
-						"data": [
-							67,
-							111,
-							110,
-							118,
-							101,
-							114,
-							116,
-							101,
-							100,
-							32,
-							118,
-							105,
-							97,
-							32,
-							116,
-							101,
-							97,
-							109,
-							112,
-							97,
-							114,
-							97,
-							108,
-							108,
-							97,
-							120,
-							47,
-							117,
-							110,
-							111,
-							99,
-							111,
-							110,
-							118,
-							45,
-							119,
-							101,
-							98,
-							115,
-							101,
-							114,
-							118,
-							105,
-							99,
-							101,
-							10
-						]
-					},
-					"filename": "assignment1",
-					"originalFormat": "docx",
-					"targetFormat": "pdf"
+					"conversionId": "55309c37-aed3-4ee9-a143-f1e305333189"
 				}
 			},
 			"EConversionStatus": {
@@ -148,20 +82,208 @@
 					],
 					"remainingConversions": 1
 				}
+			},
+			"ICodec": {
+				"properties": {
+					"canDecode": {
+						"type": "boolean"
+					},
+					"canEncode": {
+						"type": "boolean"
+					},
+					"description": {
+						"type": "string"
+					},
+					"directRendering": {
+						"type": "boolean"
+					},
+					"drawHorizBand": {
+						"type": "boolean"
+					},
+					"intraFrameOnly": {
+						"type": "boolean"
+					},
+					"isLossless": {
+						"type": "boolean"
+					},
+					"isLossy": {
+						"type": "boolean"
+					},
+					"type": {
+						"type": "string"
+					},
+					"weirdFrameTruncation": {
+						"type": "boolean"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"canDecode",
+					"canEncode",
+					"description",
+					"type",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false,
+				"example": {
+					"type": "audio",
+					"description": "(decoders: mp3float mp3 ) (encoders: libmp3lame )",
+					"canDecode": true,
+					"canEncode": true,
+					"intraFrameOnly": true,
+					"isLossy": true,
+					"isLossless": false,
+					"name": "mp3"
+				}
+			},
+			"IEncoder": {
+				"properties": {
+					"description": {
+						"type": "string"
+					},
+					"directRendering": {
+						"type": "boolean"
+					},
+					"drawHorizBand": {
+						"type": "boolean"
+					},
+					"experimental": {
+						"type": "boolean"
+					},
+					"frameMT": {
+						"type": "boolean"
+					},
+					"sliceMT": {
+						"type": "boolean"
+					},
+					"type": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"description",
+					"directRendering",
+					"drawHorizBand",
+					"experimental",
+					"frameMT",
+					"sliceMT",
+					"type",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IFilter": {
+				"properties": {
+					"description": {
+						"type": "string"
+					},
+					"input": {
+						"type": "string"
+					},
+					"multipleInputs": {
+						"type": "boolean"
+					},
+					"multipleOutputs": {
+						"type": "boolean"
+					},
+					"output": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"description",
+					"input",
+					"multipleInputs",
+					"multipleOutputs",
+					"output",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IFormat": {
+				"properties": {
+					"canDemux": {
+						"type": "boolean"
+					},
+					"canMux": {
+						"type": "boolean"
+					},
+					"description": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"canDemux",
+					"canMux",
+					"description",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IFFmpegCapabilities": {
+				"properties": {
+					"codecs": {
+						"items": {
+							"$ref": "#/components/schemas/ICodec"
+						},
+						"type": "array"
+					},
+					"encoders": {
+						"items": {
+							"$ref": "#/components/schemas/IEncoder"
+						},
+						"type": "array"
+					},
+					"filters": {
+						"items": {
+							"$ref": "#/components/schemas/IFilter"
+						},
+						"type": "array"
+					},
+					"formats": {
+						"items": {
+							"$ref": "#/components/schemas/IFormat"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"codecs",
+					"encoders",
+					"filters",
+					"formats"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
 	},
 	"info": {
 		"title": "ffmpeg-webservice",
-		"version": "0.1.0",
-		"description": "REST api to convert files to different formats using unoconv",
+		"version": "0.2.0",
+		"description": "REST api to convert files to different formats using ffmpeg",
 		"license": {
 			"name": "MIT"
 		},
 		"contact": {
 			"name": "Sven Patrick Meier ",
-			"email": "sven.meier@team-parallax.com"
+			"email": "sven.patrick.meier@team-parallax.com"
 		}
 	},
 	"openapi": "3.0.0",
@@ -174,7 +296,9 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/IConversionProcessingResponse"
+								}
 							}
 						}
 					}
@@ -186,19 +310,30 @@
 				"security": [],
 				"parameters": [],
 				"requestBody": {
-					"description": "contains the file to convert",
 					"required": true,
 					"content": {
-						"application/json": {
+						"multipart/form-data": {
 							"schema": {
-								"$ref": "#/components/schemas/IConversionRequestBody"
+								"type": "object",
+								"properties": {
+									"conversionFile": {
+										"type": "string",
+										"format": "binary"
+									},
+									"originalFormat": {
+										"type": "string"
+									},
+									"targetFormat": {
+										"type": "string"
+									}
+								}
 							}
 						}
 					}
 				}
 			},
 			"get": {
-				"operationId": "GetConversions",
+				"operationId": "GetConversionQueueStatus",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -219,7 +354,7 @@
 				"parameters": []
 			}
 		},
-		"/conversion/{fileId}": {
+		"/conversion/{conversionId}": {
 			"get": {
 				"operationId": "GetConvertedFile",
 				"responses": {
@@ -227,7 +362,9 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/IConversionStatus"
+								}
 							}
 						}
 					}
@@ -241,7 +378,7 @@
 					{
 						"description": "Unique identifier for the conversion of a file.",
 						"in": "path",
-						"name": "fileId",
+						"name": "conversionId",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -250,17 +387,173 @@
 				]
 			}
 		},
-		"/formats": {
+		"/conversion/{conversionId}/download": {
 			"get": {
-				"operationId": "GetSupportedFormats",
+				"operationId": "GetConvertedFileDownload",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							},
+							"application/pdf": {
+								"schema": {
+									"type": "string",
+									"format": "byte"
+								}
+							}
+						}
 					}
 				},
-				"description": "Returns a list of all possible formats to convert from and to.",
+				"description": "Returns the current status for a conversion given a conversionId\nIf status is 'converted' the resulting converted file\nwill be available to download.",
 				"tags": [
-					"Conversion-Formats"
+					"Conversion"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "the id of the file-conversion that is requested",
+						"in": "path",
+						"name": "conversionId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "extension",
+						"required": false,
+						"schema": {
+							"default": "mp3",
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/capabilities": {
+			"get": {
+				"operationId": "GetAvailableCapabilities",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IFFmpegCapabilities"
+								}
+							}
+						}
+					}
+				},
+				"description": "Returns a list of capabilities and options that\ncan be applied to an FFmpeg command.",
+				"tags": [
+					"Capabilities"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/capabilities/codecs": {
+			"get": {
+				"operationId": "GetAvailableCodecs",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ICodec"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Capabilities"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/capabilities/encoders": {
+			"get": {
+				"operationId": "GetAvailableEncoders",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IEncoder"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"description": "Returns all available encoders FFmpeg is able to use.",
+				"tags": [
+					"Capabilities"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/capabilities/filter": {
+			"get": {
+				"operationId": "GetAvailableFilter",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IFilter"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"description": "Returns all available filters that can be used for conversion.",
+				"tags": [
+					"Capabilities"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/capabilities/formats": {
+			"get": {
+				"operationId": "GetAvailableFormats",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IFormat"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"description": "Returns all available formats that can be converted with FFmpeg.",
+				"tags": [
+					"Capabilities"
 				],
 				"security": [],
 				"parameters": []
